[project]
name = "developing-llms-applications-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.9.0",
    "anthropic>=0.58.2",
    "bitsandbytes>=0.46.1",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.11.0.post1",
    "google-generativeai>=0.8.5",
    "huggingface-hub>=0.33.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.0",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-neo4j>=0.4.0",
    "langchain-ollama>=0.3.5",
    "langchain-openai>=0.3.28",
    "langchain-tavily>=0.2.10",
    "langgraph>=0.5.3",
    "langsmith>=0.4.8",
    "markdown>=3.8.2",
    "neo4j>=5.28.1",
    "notebook>=7.4.4",
    "numexpr>=2.11.0",
    "numpy>=2.3.1",
    "openai>=1.97.0",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
    "ragas>=0.3.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
    "unstructured>=0.18.9",
    "wikipedia>=1.4.0",
]
